upgrade to rcp 4.12